# warehouse-manager

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  template.yaml
aws_functions/authentication/: app.py
aws_functions/authorizer/: app.py
aws_functions/customer/: app.py
aws_functions/warehouse/: app.py
layers/dependencies/: requirements.txt
layers/src/warehouse_manager/configs/: authentication.py  database.py  google_maps.py
layers/src/warehouse_manager/exceptions/: base.py  database.py
layers/src/warehouse_manager/models/database/: __init__.py  customer.py  warehouse.py
layers/src/warehouse_manager/models/database/mixins/: base_mixin.py  session_mixin.py
layers/src/warehouse_manager/serializers/: customer.py  warehouse.py
layers/src/warehouse_manager/services/: authentication.py  customer.py  google_maps.py  warehouse.py
layers/src/warehouse_manager/sessions/: database.py
layers/src/warehouse_manager/utils/: aws.py  class_.py
migrations/: alembic.ini
migrations/alembic/: env.py
migrations/alembic/versions/: 2c53d849eb73_initial_migration.py  34263ba28278_fix_location_types.py  b8b9c74b13e1_initial_migration.py
tests/automated/services/: test_authentication.py  test_google_maps.py
tests/resources/sql/: tables.sql
