[tool.poetry]
name = "warehouse-manager"
version = "0.1.0"
description = "Sierra studio tech challenge"
authors = ["Gerdson Silva <gerdson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
