[tool.poetry]
name = "warehouse-manager"
version = "0.1.0"
description = "Sierra studio tech challenge"
authors = ["Gerdson Silva <gerdson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.26.0"}
requests = "^2.31.0"
aws-xray-sdk = "^2.12.1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pymysql = "^1.1.0"
cryptography = "^41.0.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-dotenv = "^0.5.2"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "warehouse_manager"

[tool.mypy]
files = [
    "functions",
    "layers/src",
    "tests"
]
python_version = "3.12"

# Enabled mypy's 'strict' mode, but disabled certain options enabled by it as it's too strict and doesn't work well with
# third-party packages that don't use type hints
strict = true
disallow_subclassing_any = false       # sqlalchemy
disallow_untyped_decorators = false    # aws_lambda_powertools

# Ignore the imports for these third-party packages because these models have opted in for type-checking but they don't
# support it
[[tool.mypy.overrides]]
module = [
    "pytz",
    "requests.*"
]
ignore_missing_imports = true

# Ignore attr-defined as mocks for our tests use lazy attributes and methods
[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
pythonpath = [
    "functions",
    "layers/src"
]
testpaths = [
    "tests/automated"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
